Padding for news menu button on mobile, header is no longer 100% width on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -236,101 +236,106 @@ blockquote {
 
 @media only screen and (max-width: 542px) {
   .ui.menu.bar { 
-    display: block;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    flex-direction: column;
+      display: block;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      flex-direction: column;
+      padding-bottom: 1em;
   }
 
-  .ui.menu.bar > .ui.right.item {
-    position: absolute;
-    right: -1em;
-    top: -1em;
+  .ui.menu.bar > .header.item {
+      width: 50%;
+  }
+
+  .ui.menu.bar > .ui.right.github.item {
+      position: absolute;
+      right: -1em;
+      top: -1em;
   }
 }
 
 @media only screen and (max-width: 767px) {
-  .ui.container {
-    width: auto !important;
-    margin-left: 1em !important;
-    margin-right: 1em !important;
-  }
+    .ui.container {
+        width: auto !important;
+        margin-left: 1em !important;
+        margin-right: 1em !important;
+    }
 
-  .ui.grid.container {
-    width: auto !important;
-  }
+    .ui.grid.container {
+        width: auto !important;
+    }
 
-  .ui.relaxed.grid.container {
-    width: auto !important;
-  }
+    .ui.relaxed.grid.container {
+        width: auto !important;
+    }
 
-  .ui.very.relaxed.grid.container {
-    width: auto !important;
-  }
+    .ui.very.relaxed.grid.container {
+        width: auto !important;
+    }
 }
 
 /* Tablet */
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-  .ui.container {
-    width: 600px;
-    margin-left: auto !important;
-    margin-right: auto !important;
-  }
+    .ui.container {
+        width: 600px;
+        margin-left: auto !important;
+        margin-right: auto !important;
+    }
 
-  .ui.grid.container {
-    width: calc( 600px  +  2rem ) !important;
-  }
+    .ui.grid.container {
+        width: calc( 600px  +  2rem ) !important;
+    }
 
-  .ui.relaxed.grid.container {
-    width: calc( 600px  +  3rem ) !important;
-  }
+    .ui.relaxed.grid.container {
+        width: calc( 600px  +  3rem ) !important;
+    }
 
-  .ui.very.relaxed.grid.container {
-    width: calc( 600px  +  5rem ) !important;
-  }
+    .ui.very.relaxed.grid.container {
+        width: calc( 600px  +  5rem ) !important;
+    }
 }
 
 /* Small Monitor */
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .ui.container {
-    width: 800px;
-    margin-left: auto !important;
-    margin-right: auto !important;
-  }
+    .ui.container {
+        width: 800px;
+        margin-left: auto !important;
+        margin-right: auto !important;
+    }
 
-  .ui.grid.container {
-    width: calc( 800px  +  2rem ) !important;
-  }
+    .ui.grid.container {
+        width: calc( 800px  +  2rem ) !important;
+    }
 
-  .ui.relaxed.grid.container {
-    width: calc( 800px  +  3rem ) !important;
-  }
+    .ui.relaxed.grid.container {
+        width: calc( 800px  +  3rem ) !important;
+    }
 
-  .ui.very.relaxed.grid.container {
-    width: calc( 800px  +  5rem ) !important;
-  }
+    .ui.very.relaxed.grid.container {
+        width: calc( 800px  +  5rem ) !important;
+    }
 }
 
 /* Large Monitor */
 
 @media only screen and (min-width: 1200px) {
-  .ui.container {
-    width: 950px;
-    margin-left: auto !important;
-    margin-right: auto !important;
-  }
+    .ui.container {
+        width: 950px;
+        margin-left: auto !important;
+        margin-right: auto !important;
+    }
 
-  .ui.grid.container {
-    width: calc( 950px  +  2rem ) !important;
-  }
+    .ui.grid.container {
+        width: calc( 950px  +  2rem ) !important;
+    }
 
-  .ui.relaxed.grid.container {
-    width: calc( 950px  +  3rem ) !important;
-  }
+    .ui.relaxed.grid.container {
+        width: calc( 950px  +  3rem ) !important;
+    }
 
-  .ui.very.relaxed.grid.container {
-    width: calc( 950px  +  5rem ) !important;
-  }
+    .ui.very.relaxed.grid.container {
+        width: calc( 950px  +  5rem ) !important;
+    }
 }
